[package]
name = "zero-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.46.1"
libp2p-webrtc = "0.3.0"
libp2p-noise = "0.37.0"
libp2p-kad = "0.38.0"
libp2p-gossipsub = "0.39.0"
async-std = { version="1.12.0", features = ["attributes"] }
futures = "*"
